cmake_minimum_required(VERSION 3.10)
project(CppExercise0828)

set(CMAKE_CXX_STANDARD 11)

add_executable(CppExercise0828 CppFolder/main.cpp CppFolder/functiontest.cpp CppFolder/functiontest.h CppFolder/Line.cpp CppFolder/exerciseList.cpp CppFolder/exerciseList.h CppFolder/Line.h CppFolder/Chapter2/Chapter2_5.cpp CppFolder/Chapter2/Chapter2_5.h CppFolder/NetworkLearning/MemberAccessOperator.cpp CppFolder/NetworkLearning/MemberAccessOperator.h CppFolder/Chapter2/Chapter2_7.cpp CppFolder/Chapter2/Chapter2_7.h CppFolder/Chapter2/Chapter2Exer2_2.cpp CppFolder/Chapter2/Chapter2Exer2_2.h)